added lattice activation function

--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -320,13 +320,8 @@
     "#exporti\n",
     "@jit(nopython=True)\n",
     "def random_lattice(som_size, dimensionality):\n",
-    "    X, Y, Z = som_size[0], som_size[1], dimensionality\n",
-    "    D = np.empty((X,Y,Z), dtype=np.float64)\n",
-    "    for x in range(X):\n",
-    "        for y in range(Y):\n",
-    "            for z in range(Z):\n",
-    "                D[x,y,z] = np.random.random()\n",
-    "    return D"
+    "    size = (som_size[0], som_size[1], dimensionality)\n",
+    "    return np.random.random(size)"
    ]
   },
   {
@@ -509,6 +504,41 @@
    "source": [
     "#exporti\n",
     "@jit(nopython=True)\n",
+    "def distances_to_lattice_vec(vec, lattice):\n",
+    "    X, Y, Z = lattice.shape\n",
+    "    empty = np.empty((X,Y))\n",
+    "    for x in range(X):\n",
+    "        for y in range(Y):\n",
+    "            dist = euclidean_squared(vec, lattice[x,y])\n",
+    "            empty[x,y] = dist\n",
+    "    return empty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
+    "def distances_to_lattice_matrix(veclist, lattice):\n",
+    "    N, _ = veclist.shape\n",
+    "    X, Y, _ = lattice.shape\n",
+    "    res = np.empty((N, X, Y))\n",
+    "    for n in range(N):\n",
+    "        res[n] = distances_to_lattice_vec(veclist[n], lattice)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporti\n",
+    "@jit(nopython=True)\n",
     "def normalize_data(data, min_val=0, max_val=1):\n",
     "    \"\"\"Normalizes the data between `min_val` and `max_val`\n",
     "\n",
@@ -587,7 +617,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SOM training took: 0.974111 seconds.\n"
+      "SOM training took: 0.000346 seconds.\n"
      ]
     }
    ],
@@ -610,7 +640,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.82975459, 0.4702744 , 0.80628789])"
+       "array([0.26362582, 0.71801255, 0.51536403])"
       ]
      },
      "execution_count": null,
@@ -644,16 +674,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[3.80228237],\n",
-       "       [4.246669  ],\n",
-       "       [5.92302337],\n",
-       "       [0.06539275],\n",
-       "       [1.62717695],\n",
-       "       [1.30394081],\n",
-       "       [3.31768382],\n",
-       "       [5.29360514],\n",
-       "       [2.72601288],\n",
-       "       [7.12291826]])"
+       "array([[ 4.20136335],\n",
+       "       [-1.28325624],\n",
+       "       [-2.81738635],\n",
+       "       [ 3.09437277],\n",
+       "       [ 2.75269975],\n",
+       "       [ 4.4642039 ],\n",
+       "       [ 0.25853544],\n",
+       "       [ 5.12622384],\n",
+       "       [ 0.48275023],\n",
+       "       [-0.26705081]])"
       ]
      },
      "execution_count": null,
@@ -681,16 +711,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.52949006],\n",
-       "       [0.59245641],\n",
-       "       [0.82998363],\n",
+       "array([[0.88357177],\n",
+       "       [0.19312757],\n",
        "       [0.        ],\n",
-       "       [0.22129345],\n",
-       "       [0.17549325],\n",
-       "       [0.46082597],\n",
-       "       [0.74079964],\n",
-       "       [0.37699051],\n",
-       "       [1.        ]])"
+       "       [0.74421566],\n",
+       "       [0.70120335],\n",
+       "       [0.91666007],\n",
+       "       [0.38721963],\n",
+       "       [1.        ],\n",
+       "       [0.41544543],\n",
+       "       [0.32105497]])"
       ]
      },
      "execution_count": null,
@@ -839,7 +869,7 @@
     "        Returns\n",
     "        --\n",
     "        A dictionary whose keys are indexes of the lattice's cells, \n",
-    "        and values the data belonging to each cell\n",
+    "        and whose values are data points belonging to each cell\n",
     "        \"\"\"\n",
     "    start = timer()\n",
     "    if not normalize:\n",
@@ -882,17 +912,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Projecting on SOM took: 0.155188 seconds.\n",
-      "(0, 0) [0.72026671 0.68364303 0.7398497 ]\n",
-      "(0, 5) [0.38419513 0.27225712 0.7623098 ]\n",
-      "(0, 7) [0.18277305 0.31794927 0.73312179]\n",
-      "(1, 2) [0.82589066 0.40121172 0.86289732]\n",
-      "(2, 0) [0.91615362 0.56429496 0.68819752]\n",
-      "(2, 6) [0.56778824 0.67454398 0.62951414]\n",
-      "(3, 0) [0.92402698 0.55133819 0.63907765]\n",
-      "(4, 1) [0.97268193 0.52063478 0.51377328]\n",
-      "(4, 3) [0.85741004 0.17499699 0.13143077]\n",
-      "(4, 7) [0.37370985 0.73221001 0.32246477]\n"
+      "Projecting on SOM took: 0.154747 seconds.\n",
+      "(0, 0) [0.44394013 0.82009467 0.01191742]\n",
+      "(0, 3) [0.86938509 0.79676988 0.16149487]\n",
+      "(0, 5) [0.60375427 0.5522568  0.24649728]\n",
+      "(0, 7) [0.1786339  0.10732586 0.21637102]\n",
+      "(2, 1) [0.1748882  0.6770097  0.71589243]\n",
+      "(2, 4) [0.70554175 0.60244867 0.29889977]\n",
+      "(2, 7) [0.51614631 0.2731998  0.39448849]\n",
+      "(4, 0) [0.03016391 0.71200918 0.82974036]\n",
+      "(4, 3) [0.77125934 0.67477822 0.66644766]\n",
+      "(4, 6) [0.84166406 0.38191879 0.29666319]\n"
      ]
     }
    ],
@@ -910,8 +940,145 @@
    "outputs": [],
    "source": [
     "#export\n",
+    "def lattice_activations(data, lattice, normalize=False, exponent=1):\n",
+    "    \"\"\"Projects the data on the lattice, and computes the vector of activations for each data point.\n",
+    "\n",
+    "        Parameters\n",
+    "        ---\n",
+    "        data : numpy array\n",
+    "        \n",
+    "            The input data tensor of the shape NxD, where:\n",
+    "            N - instances axis\n",
+    "            D - features axis\n",
+    "            \n",
+    "        normalize : boolean, optional\n",
+    "        \n",
+    "            If True, the data will be normalized\n",
+    "\n",
+    "        exponent : float, optional\n",
+    "            \n",
+    "            if different from 1, activations will be raised \n",
+    "            to the power of the exponent and then normalized between 0 and 1\n",
+    "\n",
+    "        Returns\n",
+    "        --\n",
+    "        A tensor of lattice activations\n",
+    "        \"\"\"\n",
+    "    start = timer()\n",
+    "    projected = []\n",
+    "    if not normalize:\n",
+    "        data_scaled = data\n",
+    "    else:\n",
+    "        data_scaled = normalize_data(data)\n",
+    "        \n",
+    "    # computing distances to the lattice\n",
+    "    projected = distances_to_lattice_matrix(data_scaled, lattice)\n",
+    "    if exponent==1:\n",
+    "        scaled = projected.max() - projected\n",
+    "    else:\n",
+    "        scaled = np.power((projected.max() - projected),exponent)\n",
+    "    valmin, valmax = scaled.min(), scaled.max()\n",
+    "    scaled = (scaled - valmin) / (valmax - valmin)\n",
+    "    end = timer()\n",
+    "    print(\"Getting SOM activations took: %f seconds.\" %(end - start))  \n",
+    "    return scaled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us compute how the vector activates the lattice. (Euclidean distance from each cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting SOM activations took: 0.000074 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled = lattice_activations(my_data, lattice, exponent=8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Activations of the data point 0:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.22, 0.25, 1.  , 1.  , 0.81, 0.35, 0.03, 0.  ],\n",
+       "       [0.19, 0.01, 0.46, 0.97, 0.57, 0.38, 0.03, 0.  ],\n",
+       "       [0.  , 0.  , 0.  , 0.57, 0.53, 0.5 , 0.03, 0.02],\n",
+       "       [0.  , 0.  , 0.02, 0.18, 0.47, 0.39, 0.2 , 0.04],\n",
+       "       [0.  , 0.  , 0.07, 0.11, 0.14, 0.24, 0.23, 0.23]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled[0].round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Activations of the data point 5:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.  , 0.  , 0.  , 0.  , 0.  , 0.03, 0.03, 0.01],\n",
+       "       [0.02, 0.7 , 0.07, 0.  , 0.01, 0.02, 0.04, 0.03],\n",
+       "       [0.99, 1.  , 0.87, 0.02, 0.02, 0.02, 0.04, 0.04],\n",
+       "       [0.84, 0.99, 0.5 , 0.06, 0.03, 0.  , 0.  , 0.03],\n",
+       "       [0.8 , 0.82, 0.14, 0.06, 0.05, 0.  , 0.  , 0.  ]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled[5].round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
     "def lattice_closest_vectors(data, lattice, additional_list=None, normalized=False):\n",
-    "    \"\"\"Finds the closest data vector to each cellsin the lattice.\n",
+    "    \"\"\"Finds the closest data vector to each cell in the lattice.\n",
     "\n",
     "        Parameters\n",
     "        ---\n",
@@ -973,55 +1140,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finding closest data points took: 0.063869 seconds.\n",
-      "(0, 0) [0.72026671 0.68364303 0.7398497 ]\n",
-      "(0, 1) [0.72026671 0.68364303 0.7398497 ]\n",
-      "(0, 2) [0.82589066 0.40121172 0.86289732]\n",
-      "(0, 3) [0.82589066 0.40121172 0.86289732]\n",
-      "(0, 4) [0.38419513 0.27225712 0.7623098 ]\n",
-      "(0, 5) [0.38419513 0.27225712 0.7623098 ]\n",
-      "(0, 6) [0.18277305 0.31794927 0.73312179]\n",
-      "(0, 7) [0.18277305 0.31794927 0.73312179]\n",
-      "(1, 0) [0.91615362 0.56429496 0.68819752]\n",
-      "(1, 1) [0.82589066 0.40121172 0.86289732]\n",
-      "(1, 2) [0.82589066 0.40121172 0.86289732]\n",
-      "(1, 3) [0.82589066 0.40121172 0.86289732]\n",
-      "(1, 4) [0.38419513 0.27225712 0.7623098 ]\n",
-      "(1, 5) [0.38419513 0.27225712 0.7623098 ]\n",
-      "(1, 6) [0.56778824 0.67454398 0.62951414]\n",
-      "(1, 7) [0.18277305 0.31794927 0.73312179]\n",
-      "(2, 0) [0.91615362 0.56429496 0.68819752]\n",
-      "(2, 1) [0.91615362 0.56429496 0.68819752]\n",
-      "(2, 2) [0.82589066 0.40121172 0.86289732]\n",
-      "(2, 3) [0.82589066 0.40121172 0.86289732]\n",
-      "(2, 4) [0.56778824 0.67454398 0.62951414]\n",
-      "(2, 5) [0.56778824 0.67454398 0.62951414]\n",
-      "(2, 6) [0.56778824 0.67454398 0.62951414]\n",
-      "(2, 7) [0.56778824 0.67454398 0.62951414]\n",
-      "(3, 0) [0.92402698 0.55133819 0.63907765]\n",
-      "(3, 1) [0.97268193 0.52063478 0.51377328]\n",
-      "(3, 2) [0.97268193 0.52063478 0.51377328]\n",
-      "(3, 3) [0.85741004 0.17499699 0.13143077]\n",
-      "(3, 4) [0.85741004 0.17499699 0.13143077]\n",
-      "(3, 5) [0.56778824 0.67454398 0.62951414]\n",
-      "(3, 6) [0.56778824 0.67454398 0.62951414]\n",
-      "(3, 7) [0.37370985 0.73221001 0.32246477]\n",
-      "(4, 0) [0.97268193 0.52063478 0.51377328]\n",
-      "(4, 1) [0.97268193 0.52063478 0.51377328]\n",
-      "(4, 2) [0.97268193 0.52063478 0.51377328]\n",
-      "(4, 3) [0.85741004 0.17499699 0.13143077]\n",
-      "(4, 4) [0.85741004 0.17499699 0.13143077]\n",
-      "(4, 5) [0.85741004 0.17499699 0.13143077]\n",
-      "(4, 6) [0.37370985 0.73221001 0.32246477]\n",
-      "(4, 7) [0.37370985 0.73221001 0.32246477]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "closest = lattice_closest_vectors(my_data, lattice)\n",
     "for c in closest:\n",
@@ -1058,9 +1177,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "NumbaSOM",
    "language": "python",
-   "name": "python3"
+   "name": "numbasom"
   }
  },
  "nbformat": 4,
