--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -617,7 +617,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SOM training took: 0.000346 seconds.\n"
+      "SOM training took: 0.882079 seconds.\n"
      ]
     }
    ],
@@ -640,7 +640,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.26362582, 0.71801255, 0.51536403])"
+       "array([0.33745451, 0.78054122, 0.91251117])"
       ]
      },
      "execution_count": null,
@@ -674,16 +674,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 4.20136335],\n",
-       "       [-1.28325624],\n",
-       "       [-2.81738635],\n",
-       "       [ 3.09437277],\n",
-       "       [ 2.75269975],\n",
-       "       [ 4.4642039 ],\n",
-       "       [ 0.25853544],\n",
-       "       [ 5.12622384],\n",
-       "       [ 0.48275023],\n",
-       "       [-0.26705081]])"
+       "array([[-1.04293465],\n",
+       "       [ 1.66105068],\n",
+       "       [ 4.99902485],\n",
+       "       [ 4.03622355],\n",
+       "       [ 6.1025092 ],\n",
+       "       [-3.4373023 ],\n",
+       "       [-0.48707551],\n",
+       "       [ 0.19297129],\n",
+       "       [ 2.17613642],\n",
+       "       [ 3.69202082]])"
       ]
      },
      "execution_count": null,
@@ -711,16 +711,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.88357177],\n",
-       "       [0.19312757],\n",
-       "       [0.        ],\n",
-       "       [0.74421566],\n",
-       "       [0.70120335],\n",
-       "       [0.91666007],\n",
-       "       [0.38721963],\n",
+       "array([[0.25098689],\n",
+       "       [0.53442911],\n",
+       "       [0.8843285 ],\n",
+       "       [0.78340393],\n",
        "       [1.        ],\n",
-       "       [0.41544543],\n",
-       "       [0.32105497]])"
+       "       [0.        ],\n",
+       "       [0.3092542 ],\n",
+       "       [0.38053934],\n",
+       "       [0.58842239],\n",
+       "       [0.74732327]])"
       ]
      },
      "execution_count": null,
@@ -912,17 +912,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Projecting on SOM took: 0.154747 seconds.\n",
-      "(0, 0) [0.44394013 0.82009467 0.01191742]\n",
-      "(0, 3) [0.86938509 0.79676988 0.16149487]\n",
-      "(0, 5) [0.60375427 0.5522568  0.24649728]\n",
-      "(0, 7) [0.1786339  0.10732586 0.21637102]\n",
-      "(2, 1) [0.1748882  0.6770097  0.71589243]\n",
-      "(2, 4) [0.70554175 0.60244867 0.29889977]\n",
-      "(2, 7) [0.51614631 0.2731998  0.39448849]\n",
-      "(4, 0) [0.03016391 0.71200918 0.82974036]\n",
-      "(4, 3) [0.77125934 0.67477822 0.66644766]\n",
-      "(4, 6) [0.84166406 0.38191879 0.29666319]\n"
+      "Projecting on SOM took: 0.159090 seconds.\n",
+      "(0, 0) [0.45463541 0.86601644 0.91961619]\n",
+      "(0, 4) [0.67644781 0.56173361 0.57405225]\n",
+      "(0, 7) [0.38039748 0.92845473 0.09514875]\n",
+      "(1, 2) [0.28595804 0.75255383 0.91054277]\n",
+      "(1, 4) [0.69071505 0.57031127 0.57262534]\n",
+      "(2, 7) [0.45633722 0.3801364  0.16401741]\n",
+      "(3, 4) [0.90483774 0.45491878 0.66536136]\n",
+      "(4, 0) [0.35111524 0.00187137 0.71132841]\n",
+      "(4, 2) [0.28809659 0.20528437 0.84526417]\n",
+      "(4, 7) [0.54998596 0.02396913 0.40396049]\n"
      ]
     }
    ],
@@ -980,7 +980,7 @@
     "    valmin, valmax = scaled.min(), scaled.max()\n",
     "    scaled = (scaled - valmin) / (valmax - valmin)\n",
     "    end = timer()\n",
-    "    print(\"Getting SOM activations took: %f seconds.\" %(end - start))  \n",
+    "    print(\"Computing SOM activations took: %f seconds.\" %(end - start))  \n",
     "    return scaled"
    ]
   },
@@ -1000,7 +1000,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting SOM activations took: 0.000074 seconds.\n"
+      "Computing SOM activations took: 0.330122 seconds.\n"
      ]
     }
    ],
@@ -1023,11 +1023,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.22, 0.25, 1.  , 1.  , 0.81, 0.35, 0.03, 0.  ],\n",
-       "       [0.19, 0.01, 0.46, 0.97, 0.57, 0.38, 0.03, 0.  ],\n",
-       "       [0.  , 0.  , 0.  , 0.57, 0.53, 0.5 , 0.03, 0.02],\n",
-       "       [0.  , 0.  , 0.02, 0.18, 0.47, 0.39, 0.2 , 0.04],\n",
-       "       [0.  , 0.  , 0.07, 0.11, 0.14, 0.24, 0.23, 0.23]])"
+       "array([[0.  , 0.  , 0.01, 0.03, 0.03, 0.03, 0.  , 0.  ],\n",
+       "       [0.  , 0.  , 0.01, 0.03, 0.03, 0.02, 0.  , 0.  ],\n",
+       "       [0.11, 0.06, 0.02, 0.03, 0.02, 0.02, 0.02, 0.02],\n",
+       "       [0.99, 0.84, 0.66, 0.05, 0.01, 0.02, 0.19, 0.16],\n",
+       "       [1.  , 0.89, 0.68, 0.57, 0.01, 0.02, 0.39, 0.39]])"
       ]
      },
      "execution_count": null,
@@ -1054,11 +1054,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.  , 0.  , 0.  , 0.  , 0.  , 0.03, 0.03, 0.01],\n",
-       "       [0.02, 0.7 , 0.07, 0.  , 0.01, 0.02, 0.04, 0.03],\n",
-       "       [0.99, 1.  , 0.87, 0.02, 0.02, 0.02, 0.04, 0.04],\n",
-       "       [0.84, 0.99, 0.5 , 0.06, 0.03, 0.  , 0.  , 0.03],\n",
-       "       [0.8 , 0.82, 0.14, 0.06, 0.05, 0.  , 0.  , 0.  ]])"
+       "array([[0.02, 0.03, 0.11, 0.07, 0.06, 0.06, 0.  , 0.  ],\n",
+       "       [0.03, 0.08, 0.11, 0.14, 0.06, 0.06, 0.  , 0.  ],\n",
+       "       [0.5 , 0.38, 0.24, 0.07, 0.03, 0.03, 0.01, 0.01],\n",
+       "       [0.73, 0.95, 0.99, 0.08, 0.02, 0.02, 0.07, 0.06],\n",
+       "       [0.7 , 0.91, 1.  , 0.84, 0.02, 0.03, 0.11, 0.11]])"
       ]
      },
      "execution_count": null,
@@ -1140,7 +1140,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding closest data points took: 0.067116 seconds.\n",
+      "(0, 0) [0.45463541 0.86601644 0.91961619]\n",
+      "(0, 1) [0.45463541 0.86601644 0.91961619]\n",
+      "(0, 2) [0.28595804 0.75255383 0.91054277]\n",
+      "(0, 3) [0.67644781 0.56173361 0.57405225]\n",
+      "(0, 4) [0.67644781 0.56173361 0.57405225]\n",
+      "(0, 5) [0.67644781 0.56173361 0.57405225]\n",
+      "(0, 6) [0.38039748 0.92845473 0.09514875]\n",
+      "(0, 7) [0.38039748 0.92845473 0.09514875]\n",
+      "(1, 0) [0.45463541 0.86601644 0.91961619]\n",
+      "(1, 1) [0.28595804 0.75255383 0.91054277]\n",
+      "(1, 2) [0.28595804 0.75255383 0.91054277]\n",
+      "(1, 3) [0.67644781 0.56173361 0.57405225]\n",
+      "(1, 4) [0.69071505 0.57031127 0.57262534]\n",
+      "(1, 5) [0.69071505 0.57031127 0.57262534]\n",
+      "(1, 6) [0.45633722 0.3801364  0.16401741]\n",
+      "(1, 7) [0.45633722 0.3801364  0.16401741]\n",
+      "(2, 0) [0.28595804 0.75255383 0.91054277]\n",
+      "(2, 1) [0.28595804 0.75255383 0.91054277]\n",
+      "(2, 2) [0.28595804 0.75255383 0.91054277]\n",
+      "(2, 3) [0.90483774 0.45491878 0.66536136]\n",
+      "(2, 4) [0.90483774 0.45491878 0.66536136]\n",
+      "(2, 5) [0.90483774 0.45491878 0.66536136]\n",
+      "(2, 6) [0.45633722 0.3801364  0.16401741]\n",
+      "(2, 7) [0.45633722 0.3801364  0.16401741]\n",
+      "(3, 0) [0.35111524 0.00187137 0.71132841]\n",
+      "(3, 1) [0.28809659 0.20528437 0.84526417]\n",
+      "(3, 2) [0.28809659 0.20528437 0.84526417]\n",
+      "(3, 3) [0.90483774 0.45491878 0.66536136]\n",
+      "(3, 4) [0.90483774 0.45491878 0.66536136]\n",
+      "(3, 5) [0.90483774 0.45491878 0.66536136]\n",
+      "(3, 6) [0.54998596 0.02396913 0.40396049]\n",
+      "(3, 7) [0.45633722 0.3801364  0.16401741]\n",
+      "(4, 0) [0.35111524 0.00187137 0.71132841]\n",
+      "(4, 1) [0.28809659 0.20528437 0.84526417]\n",
+      "(4, 2) [0.28809659 0.20528437 0.84526417]\n",
+      "(4, 3) [0.28809659 0.20528437 0.84526417]\n",
+      "(4, 4) [0.90483774 0.45491878 0.66536136]\n",
+      "(4, 5) [0.90483774 0.45491878 0.66536136]\n",
+      "(4, 6) [0.54998596 0.02396913 0.40396049]\n",
+      "(4, 7) [0.54998596 0.02396913 0.40396049]\n"
+     ]
+    }
+   ],
    "source": [
     "closest = lattice_closest_vectors(my_data, lattice)\n",
     "for c in closest:\n",
